tipi, calcolatrice base

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,12 @@
 
 *metadata/*
 
+.classpath
+.project
+.gitignore
+org.eclipse*
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
+/.metadata/
