--- a/spring-alimenti/src/main/resources/application.properties
+++ b/spring-alimenti/src/main/resources/application.properties
@@ -3,3 +3,9 @@ spring.datasource.username=app_java
 spring.datasource.password=Java_2022!
 
 server.port=9003
+
+spring.jpa.hibernate.ddl-auto=none
+
+spring.jpa.defer-datasource-initialization=true
+
+spring.sql.init.mode=always
