--- a/spring-canzoni/src/main/resources/application.properties
+++ b/spring-canzoni/src/main/resources/application.properties
@@ -2,10 +2,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/jato69
 spring.datasource.username=app_java
 spring.datasource.password=Java_2022!
 
-server.port=9010
+server.port=9011
 
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 
-spring.jpa.defer-datasource-initialization=true
-
-spring.sql.init.mode=always
+spring.jpa.show-sql=true
